# api

./: CLAUDE.md  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
SAGENT_HOME/.config/gh/: hosts.yml
alembic/: env.py
alembic/versions/: 001_encrypt_session_data.py
src/cartsnitch_api/: config.py  main.py  schemas.py
src/cartsnitch_api/auth/: dependencies.py  jwt.py  passwords.py  routes.py
src/cartsnitch_api/data_schemas/: __init__.py
src/cartsnitch_api/middleware/: error_handler.py  rate_limit.py
src/cartsnitch_api/models/: __init__.py  user.py
src/cartsnitch_api/pipeline/: __init__.py
src/cartsnitch_api/routes/: alerts.py  coupons.py  prices.py  products.py  public.py  purchases.py  scraping.py  shopping.py  stores.py
src/cartsnitch_api/services/: alerts.py  auth.py  clipartist.py  coupons.py  prices.py  products.py  public.py  purchases.py  queries.py  receiptwitness.py  shrinkray.py  stickershock.py  stores.py
tests/: conftest.py  test_encrypted_json.py  test_openapi.py
tests/test_auth/: test_auth_endpoints.py
tests/test_e2e/: conftest.py  test_auth_validation.py  test_cross_resource_flow.py  test_error_responses.py  test_price_history.py  test_product_search_lookup.py  test_public_endpoints.py  test_purchase_flow.py
tests/test_middleware/: conftest.py
tests/test_pipeline/: conftest.py  test_data_schemas.py  test_price_tracking.py  test_shrinkflation.py
tests/test_routes/: test_coupons.py  test_prices.py  test_products.py  test_public.py  test_purchases.py  test_stores.py
